Fix loading issue. Card labels would appear at the top while masonry waits for image load. Increase z-index of top section to hide this.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -96,6 +96,7 @@ a {
 	position: relative;
 	color: colors.$white;
 	background: colors.$dark-blue;
+    z-index: 1;
 }
 
 #home-text {
